@@ -18,7 +18,9 @@ from docutils.parsers.rst import directives, roles
 
 from sphinx import addnodes
 from sphinx.addnodes import desc_signature
-from sphinx.deprecation import RemovedInSphinx40Warning, deprecated_alias
+from sphinx.deprecation import (
+    RemovedInSphinx40Warning, RemovedInSphinx50Warning, deprecated_alias
+)
 from sphinx.util import docutils
 from sphinx.util.docfields import DocFieldTransformer, Field, TypedField
 from sphinx.util.docutils import SphinxDirective
@@ -285,9 +287,11 @@ deprecated_alias('sphinx.directives',
                  },
                  RemovedInSphinx40Warning)
 
-
-# backwards compatible old name (will be marked deprecated in 3.0)
-DescDirective = ObjectDescription
+deprecated_alias('sphinx.directives',
+                 {
+                     'DescDirective': ObjectDescription,
+                 },
+                 RemovedInSphinx50Warning)
 
 
 def setup(app: "Sphinx") -> Dict[str, Any]:
