@@ -27,6 +27,7 @@ Incompatible changes
 Deprecated
 ----------
 
+* ``sphinx.directives.DescDirective``
 * ``sphinx.domains.std.StandardDomain.add_object()``
 * ``sphinx.parsers.Parser.app``
 * ``sphinx.testing.path.Path.text()``
